# chemfiles.py

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  appveyor.yml  codecov.yml  deploy-docs.sh  dev-requirements.txt  index.html  pyproject.toml  setup.cfg  setup.py  setup.py.in  tox.ini
.github/workflows/: docs.yml  tests.yml  wheels.yml
0.10.0/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.10.0/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
0.10.1/: index.html  searchindex.js  tutorials.html
0.10.1/_sources/: index.rst.txt
0.10.1/_sources/reference/: selection.rst.txt
0.10.1/html/: genindex.html  py-modindex.html  search.html
0.10.1/html/reference/: frame.html  index.html  topology.html
0.10.1/reference/: atom.html  cell.html  residue.html  selection.html  trajectory.html
0.10.2/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.10.2/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
0.10.3/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js  tutorials.html
0.10.3/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
0.10.4/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js  tutorials.html
0.10.4/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
0.4.0/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
0.5.0/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
0.5.0/_sources/: examples.txt  index.txt
0.6.0/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
0.6.0/_sources/: reference.txt
0.7.4/: examples.html  genindex.html  index.html  py-modindex.html  reference.html  search.html  searchindex.js
0.7.4/.doctrees/: environment.pickle  examples.doctree  index.doctree  reference.doctree
0.7.4/html/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html
0.7.4/html/.doctrees/: environment.pickle  examples.doctree  index.doctree  reference.doctree
0.7.4/html/_sources/: reference.rst.txt
0.8.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.8.0/_sources/: index.rst.txt  reference.rst.txt
0.9.1/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.9.1/_sources/: tutorials.rst.txt
0.9.1/_sources/reference/: residue.rst.txt
0.9.1/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
0.9.2/: genindex.html  objects.inv  py-modindex.html  search.html  tutorials.html
0.9.2/html/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js  tutorials.html
0.9.2/html/_sources/: index.rst.txt
0.9.2/html/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
0.9.2/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
0.9.3/: genindex.html  index.html  py-modindex.html  search.html  tutorials.html
0.9.3/_sources/reference/: index.rst.txt
0.9.3/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
chemfiles/: .gitignore  __init__.py  _c_lib.py  _utils.py  atom.py  cell.py  clib.py  errors.py  external.pyi  ffi.py  find_chemfiles.py  frame.py  logging.py  misc.py  property.py  residue.py  selection.py  topology.py  trajectory.py  typing.py  utils.py
chemharp/: __init__.py  atom.py  cell.py  errors.py  ffi.py  find_chemharp.py  frame.py  logging.py  topology.py  trajectory.py
cmake/: generate_location.cmake
doc/: CMakeLists.txt  Makefile  conf.py  conf.py.in  examples.rst  htmlhidden.py  index.rst  reference.rst  requirements.txt  tutorials.rst
doc/reference/: atom.rst  cell.rst  frame.rst  residue.rst  selection.rst  topology.rst  trajectory.rst
examples/: convert.py  generate.py  indexes.py  rmsd.py  select.py
latest/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
latest/_sources/reference/: cell.rst.txt
latest/reference/: atom.html  cell.html  frame.html  index.html  residue.html  selection.html  topology.html  trajectory.html
recipe/: build.sh  deploy.sh  meta.yaml  move-conda-package.py
scripts/: build-all-wheels.sh  build-docs.sh  build-wheel.sh  check-used-functions.py  clean.sh  deploy-docs.sh  setup-appveyor.ps1
scripts/chemfiles-w32/: Dockerfile
scripts/chemfiles-w64/: Dockerfile
src/: Atom.cpp  Frame.cpp  Topology.cpp  UnitCell.cpp
src/chemfiles/: .gitignore  __init__.py  atom.py  cell.py  clib.py  clib.py.in  errors.py  ffi.py  frame.py  logging.py  misc.py  property.py  residue.py  selection.py  topology.py  trajectory.py  types.py  utils.py
tests/: CMakeLists.txt  __init__.py  _utils.py  atom.py  atoms.py  cell.py  cells.py  chrp_atom.py  chrp_cell.py  errors.py  examples.py  frame.py  misc.py  property.py  residue.py  selection.py  test_atoms.py  test_cells.py  test_errors.py  test_frame.py  test_selection.py  test_topology.py  test_trajectory.py  topology.py  trajectory.py  utils.py
