[build-system]
requires = [
    "setuptools >=49",
    "wheel >=0.36",
    "scikit-build >=0.11"
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = True

[testenv]
; this is required on windows to ensure the compiler finds the standard lib
; files (kernel32.lib, etc.) and headers
passenv = LIB INCLUDE LIBPATH
setenv =
    CHFL_PY_INTERNAL_CHEMFILES = 1
commands =
    pip install -e .
    coverage run -m unittest discover -s tests -p "*.py"
    coverage xml --include="chemfiles/*" -o .tox/coverage.xml
deps =
    discover
    coverage
    numpy
"""

[tool.black]
line-length = 88
exclude = '''
    /lib |
    /chemfiles/ffi.py |
    /doc/conf.py |
'''
