[metadata]
name = chemfiles
long_description = file: README.md
long_description_content_type = text/markdown

license_files = LICENSE
author = Guillaume Fraux
author_email = guillaume@fraux.fr
description = Read and write computational chemistry files
keywords = chemistry computational cheminformatics files formats
url = http://github.com/chemfiles/chemfiles.py
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = False

[bdist_wheel]
universal = 1
